Proper security realm implementation